无最新的代码更新

--- a/main/main.html
+++ b/main/main.html
@@ -256,9 +256,57 @@
             </ul>
         </div>
     </div>
-
 </div>
 
+<!--修改遮罩层-->
+<div class="public-layer">
+   <div class="layer-panel bk-radius">
+        <div class="panel">
+            <div class="panel-heading"><h6 class="text-center">查看列表信息</h6></div>
+            <div class="panel-body">
+                <form action="" role="form" class="form-horizontal">
+                    <div class="form-group">
+                        <label class="col-sm-3 control-label">编号：</label>
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control" value="00256" />
+                        </div>
+                    </div>
+                    <!--form-group-->
+                    <div class="form-group">
+                        <label class="control-label col-sm-3">姓名：</label>
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control"  value="Jhon Smith" placeholder="姓名">
+                        </div>
+                    </div>
+                    <!--form-group-->
+                    <div class="form-group">
+                        <label class="control-label col-sm-3">职位：</label>
+                        <div class="col-sm-6">
+                            <select name="" id="" class="form-control">
+                                <option value="-1">岗位</option>
+                                <option value="1">前端开发工程师</option>
+                                <option value="2">PHP开发工程师</option>
+                                <option value="3">.NET开发工程师</option>
+                            </select>
+                        </div>
+                    </div>
+                    <!--form-group-->
+                    <div class="form-group">
+                        <label class="control-label col-sm-3">职位薪资：</label>
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control" value="F2E" placeholder="职位">
+                        </div>
+                    </div>
+                    <!--form-group-->
+
+
+
+                </form>
+            </div>
+
+        </div>
+   </div>
+</div>
 
 <script type="text/javascript" src="../js/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="../js/bootstrap.min.js"></script>
